--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.show-sql=true
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.thymeleaf.cache=false
 spring.mvc.favicon.enabled=false
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 
-server.address=192.168.1.3
+
 
